@@ -243,3 +243,5 @@ Changes from 4.0.7 -> 4.0.8
    -- Fixed bug which allowed two guard units to spring up in a city.
    -- Fixed problems with fileio.cpp on win32
    -- RE-FIXED bug with city guards
+   -- Fixed a bug where a disabled item/skill/object was still be accepted
+      by the checker.
